<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <include
        android:id="@+id/pad_layout_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        layout="@layout/pad_layout" />

    <LinearLayout
        android:id="@+id/claws_pad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/full_open_claw_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/green_button_btn_default_holo_dark"
            android:text="@string/full_open_claw"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/open_claw_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/green_button_btn_default_holo_dark"
            android:text="@string/open_claw"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/close_claw_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/green_button_btn_default_holo_dark"
            android:text="@string/close_claw"
            android:textColor="@android:color/white" />
    </LinearLayout>
    
    <Button
        android:id="@+id/schedule_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/green_button_btn_default_holo_dark"
        android:textColor="@android:color/white"
        android:text="@string/schedule" />

    <ImageButton
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/pad_layout_view"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:background="@drawable/btn_green_selector"
        android:src="@drawable/stop_button" />

</RelativeLayout>